Pascal/test/cohadar/pascal/errors/local_shared.pas
program test;

procedure njak;
var x: shared integer;
begin
end;

begin
end.